--- a/src/fragments/examples/css/Examples.css
+++ b/src/fragments/examples/css/Examples.css
@@ -17,5 +17,9 @@
     flex: 2;
     font-size: small;
     white-space: pre-wrap;
-    font-family: monospace;
+    font-family: "Inconsolata", monospace;
+}
+
+.example-column:first-child {
+    font-family: 'Raleway', sans-serif;
 }
