--- a/src/App.css
+++ b/src/App.css
@@ -23,20 +23,15 @@
     to { transform: rotate(360deg); }
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
+header {
+    background: #0082c8;
+    box-shadow: inset 0 0 2px 0 rgba(0, 0, 0, 0.75);
+    color: #fff;
+    line-height: 74px;
+    vertical-align: middle;
 }
 
-.column {
-    flex: 1;
-    text-align: top;
-    padding: 5px;
-}
-
-.column.code {
-    flex: 2;
-    font-size: small;
-    white-space: pre-wrap;
-    font-family: monospace;
+h1, section {
+    margin: auto;
+    max-width: 1800px;
 }
